<resources>
    <string name="app_name">CoolQuotes</string>
    <string name="image">Image</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="no_account_register">Have An Account? Login</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dropdown">dropdown</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="west_coast">West coast</string>
    <string name="dark_burgundy">Dark Burgundy</string>
    <string name="chathams_blue">Chathams Blue</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="log_out">Log Out</string>
    <string name="focus_on_things">Focus On Things</string>
    <string name="right_above_you">Right Above You</string>
</resources>