<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >


    <item

        android:id="@+id/sharebtn"
        android:title="@string/share"
        android:icon="@drawable/ic_share"
        app:showAsAction="ifRoom"
        />
    <item

        android:id="@+id/mainsettings"
        android:title="@string/settings"
        app:showAsAction="never"
        />
    <item

        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"
        />
    <item

        android:id="@+id/contact"
        android:title="@string/contact_us"
        app:showAsAction="never"
        />
    <item

        android:id="@+id/logout"
        android:title="@string/log_out"
        app:showAsAction="never"
        />


</menu>