<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="@color/black">

    <EditText
        android:id="@+id/logemail"
        android:layout_width="559dp"
        android:layout_height="74dp"
        android:layout_marginTop="92dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:targetApi="lollipop" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="444dp"
        android:layout_height="124dp"
        android:layout_marginTop="128dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/logpass"
        android:layout_width="553dp"
        android:layout_height="68dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/purple_500"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#FFFFFF"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logemail"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/loginbtn"
        android:layout_width="309dp"
        android:layout_height="162dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logpass"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/loginbtn" />

    <ImageButton
        android:id="@+id/regbtn2"
        android:layout_width="322dp"
        android:layout_height="147dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="40dp"
        android:background="@null"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginbtn"
        app:layout_constraintTop_toBottomOf="@+id/logpass"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/registerbtn" />

</androidx.constraintlayout.widget.ConstraintLayout>